# securechat

./: .gitignore  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  state.py  websocket_handler.py
static/: app.js  crypto.js  index.html  media.js  state.js  style.css  ui.js  websocket.js
