[project]
name = "securechat"
version = "1.0.0"
description = "SecureChat is a modern, end-to-end encrypted chat application built with FastAPI, WebSockets, and AES-256-CBC encryption. It features a sleek, glassmorphism-based UI with real-time messaging, secure file transfers, and ephemeral message capabilities."
authors = [
    {
        "name" = "Emre Tuncer"
        "email" = "emretuncer.developer@gmail.com"
    }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.46.0",
]
